# django_vue_generator

./: .gitignore  README.rst  USAGE.rst  pyproject.toml  requirements.txt  setup.py
demo/: DemoApp.vue  requirements.txt  run.sh
demo/app/: admin.py  models.py  serializers.py  views.py
demo/app/fixtures/: demo.json
demo/app/migrations/: 0001_initial.py
demo/demo/: settings.py  urls.py
django_vue_generator/: forms.py  lists.py  utils.py  vue.py
django_vue_generator/management/commands/: build_frontend.py  generate_vue_form.py  generate_vue_list.py  start_frontend.py
