[tool.poetry]
name = "django_vue_generator"
version = "0.1.0"
description = "Generates vue frontend for django rest framework projects."
authors = ["ph <robotnaoborot@gmail.com>"]
homepage = "https://github.com/pawnhearts/django_vue_generator"

[tool.poetry.dependencies]
python = "^3.7"
djangorestframework = "^3.10"
django = "^2.2"
django-filter = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
